<resources>
    <string name="app_name">VolleyBall Counter</string>
    <string name="reset_button">Reset</string>
    <string name="undo_button">Undo</string>
    <string name="redo_button">Redo</string>
    <string name="start_new_game">Start new game</string>
    <string name="service">Service</string>
    <string name="attack">Attack</string>
    <string name="block">Block</string>
    <string name="opponent_error">Opp Error</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="wins_the_set">Wins the set</string>
    <string name="wins_the_match">Win the match</string>

</resources>
