<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.android.volleyballcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/set_tv_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/wins_tv_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/score_tv_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="56sp" />
            </LinearLayout>

            <TextView
                style="@style/text_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/attack" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/attack_button_a"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/yellow_ball"
                    android:onClick="addAttackA" />


                <TextView
                    android:id="@+id/attack_tv_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:text="0"
                    android:textSize="36sp" />
            </LinearLayout>

            <TextView
                style="@style/text_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/block"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/block_button_a"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/yellow_ball"
                    android:onClick="addBlockA" />

                <TextView
                    android:id="@+id/block_tv_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:text="0"
                    android:textSize="36sp" />
            </LinearLayout>

            <TextView
                style="@style/text_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/service"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/service_button_a"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/yellow_ball"
                    android:onClick="addServiceA" />

                <TextView
                    android:id="@+id/service_tv_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:text="0"
                    android:textSize="36sp" />
            </LinearLayout>

            <TextView
                style="@style/text_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/opponent_error"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/opp_error_button_a"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/yellow_ball"
                    android:onClick="addOppErrorsA" />

                <TextView
                    android:id="@+id/opp-error-tv-a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:text="0"
                    android:textSize="36sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/set_tv_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/score_tv_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="56sp" />

            <TextView
                style="@style/text_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/attack" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/attack_tv_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:text="0"
                    android:textSize="36sp" />

                <ImageButton
                    android:id="@+id/attack_button_b"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/yellow_ball"
                    android:onClick="addAttackB" />
            </LinearLayout>

            <TextView
                style="@style/text_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/block"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/block_tv_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:text="0"
                    android:textSize="36sp" />

                <ImageButton
                    android:id="@+id/block_button_b"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/yellow_ball"
                    android:onClick="addBlockB" />

            </LinearLayout>

            <TextView
                style="@style/text_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/service"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/service_tv_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:text="0"
                    android:textSize="36sp" />

                <ImageButton
                    android:id="@+id/service_button_b"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/yellow_ball"
                    android:onClick="addServiceB" />

            </LinearLayout>

            <TextView
                style="@style/text_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/opponent_error"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/opp-error-tv-b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:text="0"
                    android:textSize="36sp" />

                <ImageButton
                    android:id="@+id/opp_error_button_b"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/yellow_ball"
                    android:onClick="addOppErrorsB" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <Button
            android:id="@+id/undo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/reset_button"
            android:layout_centerHorizontal="true"
            android:onClick="undo"
            android:text="@string/undo_button" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="reset"
            android:text="@string/reset_button" />

        <Button
            android:id="@+id/redo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/reset_button"
            android:layout_centerHorizontal="true"
            android:onClick="redo"
            android:text="@string/redo_button" />

    </LinearLayout>
</RelativeLayout>